bug squashing

--- a/src/app/beast-view/beast-view.component.css
+++ b/src/app/beast-view/beast-view.component.css
@@ -545,7 +545,7 @@ mat-toolbar {
     min-width: 150px;
 }
 
-.ranged-shell div {
+.ranged-shell  {
     display: flex;
     justify-content: space-evenly;
     margin: 0;
